compiler/testData/asJava/lightClasses/lightClassByFqName/compilationErrors/localClassApproximation.java
public final class B /* p.B*/ {
  @org.jetbrains.annotations.NotNull()
  private final @org.jetbrains.annotations.NotNull() p.Self<?> x;

  @org.jetbrains.annotations.NotNull()
  private final @org.jetbrains.annotations.NotNull() p.Self<?> y;

  @org.jetbrains.annotations.NotNull()
  public final @org.jetbrains.annotations.NotNull() p.Self<?> getX();//  getX()

  @org.jetbrains.annotations.NotNull()
  public final @org.jetbrains.annotations.NotNull() p.Self<?> getY();//  getY()

  public  B();//  .ctor()
}
